ajustement minim du code et commentaire

--- a/index.html
+++ b/index.html
@@ -227,10 +227,12 @@
                     </svg></a>
                 </div>
                 <br>
+                <!--    DEBUT    Compteur de visite -->
                 <div class="d-flex flex-column align-items-center">
-                    <h3 id="Tcounter">Nombre de visite</h3>
+                    <h3 id="Tcounter">Nombre de visite :</h3>
                     <h3 id="counter">0</h3>
                 </div>
+                <!--    FIN    Compteur de visite -->
             </div>
         </div>
 <!--    FIN    Sticky Sidebar , icon link -->
